--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "dotenv": "^16.3.1",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "express": "^4.18.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
