--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-icons": "^4.11.0",
     "react-slideshow-image": "^4.2.1",
     "tailwindcss": "3.3.3"
+  },
+  "engines": {
+    "node": "16.17.0"
   }
 }
