--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-slideshow-image": "^4.2.1",
     "tailwindcss": "3.3.3"
   },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
+  },
   "engines": {
-    "node": "16.17.0"
+    "node": "14.x"
   }
 }
