--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-slideshow-image": "^4.2.1",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3"
   }
 }
