--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "express": "^4.18.2",
     "next": "13.5.2",
+    "nodemailer": "^6.9.5",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
