--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "express": "^4.18.2",
+    "jwt-decode": "^3.1.2",
+    "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.5",
     "next": "13.5.2",
     "nodemailer": "^6.9.5",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-input-mask": "^2.0.4",
     "react-lazy-load-image-component": "^1.6.0",
     "react-slideshow-image": "^4.2.1",
     "react-spinners": "^0.13.8",
