--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
