--- a/package.json
+++ b/package.json
@@ -9,27 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/translate": "^8.0.2",
     "@nextui-org/react": "^2.1.13",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.1",
+    "bing-translate-api": "^2.9.2",
     "dotenv": "^16.3.1",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
-    "i18n": "^0.15.1",
-    "i18next": "^23.6.0",
-    "i18react": "^0.1.2",
+    "fs": "^0.0.1-security",
+    "google-translate-api": "^2.3.0",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "next": "13.5.2",
-    "next-i18next": "^14.0.3",
     "nodemailer": "^6.9.5",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^13.3.1",
     "react-icons": "^4.11.0",
     "react-input-mask": "^2.0.4",
     "react-slideshow-image": "^4.2.1",
